RSRVR-42 async initialize api (#268)
