# server/src/main/resources/openapi/reservoir.yaml
@@ -177,6 +177,116 @@ paths:
           $ref: "#/components/responses/trait_404"
         "500":
           $ref: "#/components/responses/trait_500"
+  /reservoir/config/pools/{id}/initializations:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: Pool identifier
+        schema:
+          type: string
+    get:
+      description: >
+        Get all initialization jobs for the pool. If the pool has a running job
+        with an expired lease, this request atomically claims and resumes that job.
+      operationId: initializationsPoolGetAll
+      responses:
+        "200":
+          description: Pool initialization jobs returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: schemas/poolInitializationJob.yaml
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    post:
+      description: Start job that recalculates clusters in the pool across all records
+      operationId: initializationsPoolPost
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: schemas/poolInitializationRequest.yaml
+      responses:
+        "201":
+          description: Job created
+          headers:
+            Location:
+              description: URL of the newly created pool initialization job
+              required: true
+              schema:
+                type: string
+                format: uri
+          content:
+            application/json:
+              schema:
+                $ref: schemas/poolInitializationJob.yaml
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "409":
+          $ref: "#/components/responses/trait_409"
+        "500":
+          $ref: "#/components/responses/trait_500"
+  /reservoir/config/pools/{id}/initializations/{jobId}:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+      - in: path
+        name: id
+        required: true
+        description: Pool identifier
+        schema:
+          type: string
+      - in: path
+        name: jobId
+        required: true
+        description: Pool job identifier
+        schema:
+          type: string
+          format: uuid
+    get:
+      description: >
+        Get pool initialization job status. If the job is running with an expired
+        lease, this request atomically claims and resumes it.
+      operationId: initializationsPoolGet
+      responses:
+        "200":
+          description: Job status returned
+          content:
+            application/json:
+              schema:
+                $ref: schemas/poolInitializationJob.yaml
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    delete:
+      description: Delete and possibly cancel pool initialization job
+      operationId: initializationsPoolDelete
+      responses:
+        "204":
+          description: Job deleted or cancellation requested
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   /reservoir/config/pools/{id}/initialize:
     parameters:
       - $ref: headers/okapi-tenant.yaml
@@ -883,6 +993,13 @@ components:
           schema:
             type: object
             example: {"error":"Identifier 596d9f60-cda3-44d2-a4a1-2f48b7d4d23c not found"}
+    trait_409:
+      description: Conflict
+      content:
+        text/plain:
+          schema:
+            type: string
+            example: A pool initialization job is already running for this tenant
     trait_500:
       description: Internal error
       content:
